<resources>
    <string name="app_name">Chicago Trivia</string>

    <string name="letsPlay">Let\'s Play Chicago Trivia!</string>
    <string name="plsClick">Choose TRUE or FALSE</string>

    <string name="attempts"># Attempts: </string>
    <string name="correct"># Correct: </string>
    <string name="truthie">True</string>
    <string name="falsie">False</string>
    <string name="get">Get a question</string>

    <string name="trivia1">The first Ferris wheel made its debut in Chicago at the 1893 World\'s Columbian Exposition</string>
    <string name="trivia2">The Willis Tower is the tallest building in the world.</string>
    <string name="trivia3">Chicago has the largest collection of Impressionist paintings outside of Paris.</string>
    <string name="trivia4">The term \"Jazz\" was coined in Chicago in 1914.</string>
    <string name="trivia5">Spray paint was invented in Chicago in 1949</string>
    <string name="trivia6">Chicago was incorporated as a city in 1817</string>
    <string name="trivia7">The atom was first split (leading to the A bomb and nuclear power) at the University of Chicago.</string>
    <string name="trivia8">Chicago\'s nicknames include: The Windy City, the City of Big Shoulders, the Second City, and The City That Works.</string>
    <string name="trivia9">Chicago River is the only river in the world that flows backward.</string>
    <string name="trivia10">The Hull House opened in 1923 to aid Chicago immigrants.</string>




</resources>
