<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/chicago_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:gravity="top"
        android:scaleType="centerCrop"
        android:src="@drawable/chicago"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chicago_photo"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/letsPlay"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/text_play"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/get_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/button"
        android:text="@string/get"
        android:textColor="@color/text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/make_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_question"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/plsClick"
        android:layout_marginBottom="8dp"
        android:textSize="16sp" />
<LinearLayout
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/make_choice"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:gravity="center_horizontal"
    android:weightSum="4">

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:background="@color/button"
        android:text="@string/truthie"
        android:textColor="@color/text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:background="@color/button"
        android:text="@string/falsie"
        android:textColor="@color/text"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_below="@+id/linear_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:weightSum="8">

    <TextView
        android:id="@+id/txt_user_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:layout_weight="3"
        android:text="@string/attempts" />

    <TextView
        android:id="@+id/num_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="3"
        android:textStyle="bold"
        android:text="@string/correct"
        android:textAlignment="viewEnd" />
    <TextView
        android:id="@+id/num_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    </LinearLayout>
</RelativeLayout>


